Changing md5 to sha256 in tests and default tempelates

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -147,8 +147,8 @@ spec:
                         description: Image is the image to be provisioned.
                         properties:
                           checksum:
-                            description: Checksum is a md5sum value or a URL to retrieve
-                              one.
+                            description: Checksum is a md5sum, sha256sum or sha512sum
+                              value or a URL to retrieve one.
                             type: string
                           checksumType:
                             description: ChecksumType is the checksum algorithm for
@@ -360,8 +360,8 @@ spec:
                         description: Image is the image to be provisioned.
                         properties:
                           checksum:
-                            description: Checksum is a md5sum value or a URL to retrieve
-                              one.
+                            description: Checksum is a md5sum, sha256sum or sha512sum
+                              value or a URL to retrieve one.
                             type: string
                           checksumType:
                             description: ChecksumType is the checksum algorithm for
