--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -152,7 +152,7 @@ variables:
   IPAM_PROVISIONING_POOL_RANGE_END: "172.22.0.200"
   EXTERNAL_SUBNET_V4_HOST: "192.168.111.1"
   REGISTRY: "192.168.111.1:5000"
-  IMAGE_CHECKSUM_TYPE: "md5"
+  IMAGE_CHECKSUM_TYPE: "sha256"
   IMAGE_USERNAME: "metal3"
   NODE_DRAIN_TIMEOUT: "0s"
 
