--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -148,7 +148,8 @@ spec:
                 description: Image is the image to be provisioned.
                 properties:
                   checksum:
-                    description: Checksum is a md5sum value or a URL to retrieve one.
+                    description: Checksum is a md5sum, sha256sum or sha512sum value
+                      or a URL to retrieve one.
                     type: string
                   checksumType:
                     description: ChecksumType is the checksum algorithm for the image.
@@ -505,7 +506,8 @@ spec:
                 description: Image is the image to be provisioned.
                 properties:
                   checksum:
-                    description: Checksum is a md5sum value or a URL to retrieve one.
+                    description: Checksum is a md5sum, sha256sum or sha512sum value
+                      or a URL to retrieve one.
                     type: string
                   checksumType:
                     description: ChecksumType is the checksum algorithm for the image.
