--- a/test/e2e/data/infrastructure-metal3/bases/centos-kubeadm-config/centos-kubeadm-config.yaml
+++ b/test/e2e/data/infrastructure-metal3/bases/centos-kubeadm-config/centos-kubeadm-config.yaml
@@ -133,6 +133,7 @@ spec:
           runtime-request-timeout: 5m
         name: '{{ ds.meta_data.name }}'
     preKubeadmCommands:
+      - rm /etc/cni/net.d/*
       - systemctl restart NetworkManager.service
       - nmcli connection load /etc/NetworkManager/system-connections/ironicendpoint.nmconnection
       - nmcli connection up ironicendpoint
@@ -227,6 +228,7 @@ spec:
           [registries.insecure]
           registries = ['${REGISTRY}']
       preKubeadmCommands:
+      - rm /etc/cni/net.d/*
       - systemctl restart NetworkManager.service
       - nmcli connection load /etc/NetworkManager/system-connections/ironicendpoint.nmconnection
       - nmcli connection up ironicendpoint
