backport making container registry for calico manifest configurable
The main motivations for this change are that:
- Using docker.io in CI triggers the rate limiting thus breaking
  the CI jobs.
- Allowing the user to have more flexibility over selecting
  the registry that provides calico containers.

--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -126,6 +126,7 @@ variables:
   IRONIC_USE_MARIADB: "false"
   RESTART_CONTAINER_CERTIFICATE_UPDATED: "true"
   CONTAINER_REGISTRY: "${CONTAINER_REGISTRY:-quay.io}"
+  DOCKER_HUB_PROXY: "${DOCKER_HUB_PROXY:-docker.io}"
   IRONIC_IMAGE_TAG: "${IRONIC_IMAGE_TAG:-main}"
   UPGRADED_BMO_IMAGE_TAG: "${UPGRADED_BMO_IMAGE_TAG:-main}"
 
