--- a/test/e2e/data/shared/v1.5/metadata.yaml
+++ b/test/e2e/data/shared/v1.5/metadata.yaml
@@ -20,5 +20,8 @@ releaseSeries:
   minor: 0
   contract: v1beta1
 - major: 0
-  minor: 5
+  minor: 4
   contract: v1alpha4
+- major: 0
+  minor: 3
+  contract: v1alpha3  
