--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -123,7 +123,8 @@ variables:
   IRONIC_TLS_SETUP: "true"
   IRONIC_BASIC_AUTH: "true"
   IRONIC_KEEPALIVED: "true"
-  IRONIC_USE_MARIADB: "false"
+  # Enabling Mariadb instead of SQLite. This can be set to false once SQLite issue is resolved
+  IRONIC_USE_MARIADB: "true"
   RESTART_CONTAINER_CERTIFICATE_UPDATED: "true"
   CONTAINER_REGISTRY: "${CONTAINER_REGISTRY:-quay.io}"
   DOCKER_HUB_PROXY: "${DOCKER_HUB_PROXY:-docker.io}"
