--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -122,7 +122,8 @@ variables:
   IRONIC_TLS_SETUP: "true"
   IRONIC_BASIC_AUTH: "true"
   IRONIC_KEEPALIVED: "true"
-  IRONIC_USE_MARIADB: "false"
+  # Enabling Mariadb instead of SQLite. This can be set to false once SQLite issue is resolved
+  IRONIC_USE_MARIADB: "true"
   RESTART_CONTAINER_CERTIFICATE_UPDATED: "true"
   CONTAINER_REGISTRY: "${CONTAINER_REGISTRY:-quay.io}"
   IRONIC_IMAGE_TAG: "${IRONIC_IMAGE_TAG:-main}"
