--- a/test/e2e/data/shared/v1.6/metadata.yaml
+++ b/test/e2e/data/shared/v1.6/metadata.yaml
@@ -19,6 +19,12 @@ releaseSeries:
 - major: 1
   minor: 1
   contract: v1beta1
+- major: 1
+  minor: 0
+  contract: v1beta1
 - major: 0
-  minor: 5
+  minor: 4
   contract: v1alpha4
+- major: 0
+  minor: 3
+  contract: v1alpha3
