Stop serving v1alpha5 API Versions
Signed-off-by: Kashif Khan <kashif.khan@est.tech>

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3dataclaims.yaml
@@ -27,6 +27,7 @@ spec:
       jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
+    deprecated: true
     name: v1alpha5
     schema:
       openAPIV3Schema:
@@ -133,7 +134,7 @@ spec:
                 x-kubernetes-map-type: atomic
             type: object
         type: object
-    served: true
+    served: false
     storage: false
     subresources:
       status: {}
