--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3remediationtemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3remediationtemplates.yaml
@@ -22,7 +22,8 @@ spec:
     singular: metal3remediationtemplate
   scope: Namespaced
   versions:
-  - name: v1alpha5
+  - deprecated: true
+    name: v1alpha5
     schema:
       openAPIV3Schema:
         description: Metal3RemediationTemplate is the Schema for the metal3remediationtemplates
@@ -98,7 +99,7 @@ spec:
             - status
             type: object
         type: object
-    served: true
+    served: false
     storage: false
     subresources:
       status: {}
