--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -43,6 +43,7 @@ spec:
       jsonPath: .spec.controlPlaneEndpoint
       name: Endpoint
       type: string
+    deprecated: true
     name: v1alpha5
     schema:
       openAPIV3Schema:
@@ -113,7 +114,7 @@ spec:
             - ready
             type: object
         type: object
-    served: true
+    served: false
     storage: false
     subresources:
       status: {}
