--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
@@ -43,6 +43,7 @@ spec:
       jsonPath: .status.phase
       name: Phase
       type: string
+    deprecated: true
     name: v1alpha5
     schema:
       openAPIV3Schema:
@@ -376,7 +377,7 @@ spec:
                 x-kubernetes-map-type: atomic
             type: object
         type: object
-    served: true
+    served: false
     storage: false
     subresources:
       status: {}
