Added support for ClusterClass
Co-authored-by: Lennart Jern <lennart.jern@gmail.com>
Co-authored-by: Furkat Gofurov <furkat.gofurov@suse.com>
Signed-off-by: Patryk Strusiewicz-Surmacki <patryk-pawel.strusiewicz-surmacki@external.telekom.de>

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ commonLabels:
 
 resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
+- bases/infrastructure.cluster.x-k8s.io_metal3clustertemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machines.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
 - bases/infrastructure.cluster.x-k8s.io_metal3datatemplates.yaml
