--- a/test/e2e/config/e2e_conf.yaml
+++ b/test/e2e/config/e2e_conf.yaml
@@ -18,78 +18,89 @@ providers:
 - name: cluster-api
   type: CoreProvider
   versions:
-  - name: ${CAPI_FROM_RELEASE}
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/core-components.yaml"
+  - name: v1.2.12
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.2.12/core-components.yaml"
     type: "url"
-    contract: ${CONTRACT_FROM}
+    contract: v1beta1
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
-  - name: ${CAPI_TO_RELEASE}
+      - sourcePath: "../data/shared/v1.2/metadata.yaml"
+  - name: v0.4.8
     # Use manifest from source files
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/core-components.yaml"
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.4.8/core-components.yaml"
     type: "url"
-    contract: ${CONTRACT_TO}
+    contract: v1alpha4
     files:
-      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
+      - sourcePath: "../data/shared/v0.4/metadata.yaml"
     replacements:
-      - old: "--leader-elect"
-        new: "--leader-elect=false"
+      - old: --metrics-addr=127.0.0.1:8080
+        new: --metrics-addr=:8080
 - name: kubeadm
   type: BootstrapProvider
   versions:
-  - name: ${CAPI_FROM_RELEASE} # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/bootstrap-components.yaml"
+  - name: v1.2.12 # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.2.12/bootstrap-components.yaml"
     type: "url"
-    contract: ${CONTRACT_FROM}
+    contract: v1beta1
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
-  - name: ${CAPI_TO_RELEASE}
+      - sourcePath: "../data/shared/v1.2/metadata.yaml"
+  - name: v0.4.8
     # Use manifest from source files
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/bootstrap-components.yaml"
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.4.8/bootstrap-components.yaml"
     type: "url"
-    contract: ${CONTRACT_TO}
+    contract: v1alpha4
     files:
-      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
+      - sourcePath: "../data/shared/v0.4/metadata.yaml"
     replacements:
-      - old: "--leader-elect"
-        new: "--leader-elect=false"
+      - old: --metrics-addr=127.0.0.1:8080
+        new: --metrics-addr=:8080
 - name: kubeadm
   type: ControlPlaneProvider
   versions:
-  - name: ${CAPI_FROM_RELEASE} # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_FROM_RELEASE}/control-plane-components.yaml"
+  - name: v1.2.12 # latest published release in the v1alpha4 series; this is used for v1alpha4 --> v1beta1 clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v1.2.12/control-plane-components.yaml"
     type: "url"
-    contract: ${CONTRACT_FROM}
+    contract: v1beta1
     replacements:
       - old: --metrics-addr=127.0.0.1:8080
         new: --metrics-addr=:8080
     files:
-      - sourcePath: "../data/shared/${CAPI_FROM_RELEASE:0:4}/metadata.yaml"
-  - name: ${CAPI_TO_RELEASE}
+      - sourcePath: "../data/shared/v1.2/metadata.yaml"
+  - name: v0.4.8
     # Use manifest from source files
-    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/${CAPI_TO_RELEASE}/control-plane-components.yaml"
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/v0.4.8/control-plane-components.yaml"
     type: "url"
-    contract: ${CONTRACT_TO}
+    contract: v1alpha4
     files:
-      - sourcePath: "../data/shared/${CAPI_TO_RELEASE:0:4}/metadata.yaml"
+      - sourcePath: "../data/shared/v0.4/metadata.yaml"
     replacements:
-      - old: "--leader-elect"
-        new: "--leader-elect=false"
+      - old: --metrics-addr=127.0.0.1:8080
+        new: --metrics-addr=:8080
 - name: metal3
   type: InfrastructureProvider
   versions:
-  - name: ${CAPM3_FROM_RELEASE}
-    value: "https://github.com/metal3-io/cluster-api-provider-metal3/releases/download/${CAPM3_FROM_RELEASE}/infrastructure-components.yaml"
+  - name: v0.5.5
+    value: "https://github.com/metal3-io/cluster-api-provider-metal3/releases/download/v0.5.5/infrastructure-components.yaml"
     type: "url"
-    contract: ${CONTRACT_FROM}
+    contract: v1alpha5
     files:
-    - sourcePath: "../data/infrastructure-metal3/${CAPM3_FROM_RELEASE:0:4}/metadata.yaml"
+    - sourcePath: "../data/infrastructure-metal3/v0.5/metadata.yaml"
+      targetName: "metadata.yaml"
+    - sourcePath: "../_out/cluster-template-ubuntu.yaml"
+      targetName: "cluster-template-ubuntu.yaml"
+    - sourcePath: "../_out/cluster-template-upgrade-workload.yaml"
+      targetName: "cluster-template-upgrade-workload.yaml"
+  - name: v1.2.2
+    value: "https://github.com/metal3-io/cluster-api-provider-metal3/releases/download/v1.2.2/infrastructure-components.yaml"
+    type: "url"
+    contract: v1beta1
+    files:
+    - sourcePath: "../data/infrastructure-metal3/v1.2/metadata.yaml"
       targetName: "metadata.yaml"
     - sourcePath: "../_out/cluster-template-ubuntu.yaml"
       targetName: "cluster-template-ubuntu.yaml"
