--- a/.github/workflows/build-images-action.yml
+++ b/.github/workflows/build-images-action.yml
@@ -3,10 +3,10 @@ name: build-images-action
 on:
   push:
     branches:
-    - main
-    - release-*
+    - 'main'
+    - 'release-*'
     tags:
-    - v*
+    - 'v*'
 
 permissions: {}
 
