--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_metal3machinetemplates.yaml
@@ -68,6 +68,17 @@ spec:
                         - metadata
                         - disabled
                         type: string
+                      customDeploy:
+                        description: A custom deploy procedure.
+                        properties:
+                          method:
+                            description: Custom deploy method name. This name is specific
+                              to the deploy ramdisk used. If you don't have a custom
+                              deploy ramdisk, you shouldn't use CustomDeploy.
+                            type: string
+                        required:
+                        - method
+                        type: object
                       dataTemplate:
                         description: MetadataTemplate is a reference to a Metal3DataTemplate
                           object containing a template of metadata to be rendered.
@@ -222,8 +233,6 @@ spec:
                             type: string
                         type: object
                         x-kubernetes-map-type: atomic
-                    required:
-                    - image
                     type: object
                 required:
                 - spec
