--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,6 +2,9 @@ apiVersion: clusterctl.cluster.x-k8s.io/v1alpha3
 kind: Metadata
 releaseSeries:
 - major: 1
+  minor: 7
+  contract: v1beta1
+- major: 1
   minor: 6
   contract: v1beta1
 - major: 1
@@ -19,6 +22,3 @@ releaseSeries:
 - major: 1
   minor: 1
   contract: v1beta1
-- major: 0
-  minor: 5
-  contract: v1alpha4
