--- a/config/ipam/image_patch.yaml
+++ b/config/ipam/image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: quay.io/metal3-io/ip-address-manager:v1.7.0-beta.0
+      - image: quay.io/metal3-io/ip-address-manager:v1.7.0
         name: manager
