--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,8 +4,10 @@ kind: Kustomization
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 
-commonLabels:
-  cluster.x-k8s.io/v1beta1: v1beta1
+labels:
+- includeSelectors: true
+  pairs:
+    cluster.x-k8s.io/v1beta1: v1beta1
 
 resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3clusters.yaml
@@ -19,34 +21,34 @@ resources:
 - bases/infrastructure.cluster.x-k8s.io_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_metal3machines.yaml
-- patches/webhook_in_metal3clusters.yaml
-- patches/webhook_in_metal3machinetemplates.yaml
-- patches/webhook_in_metal3datatemplates.yaml
-- patches/webhook_in_metal3datas.yaml
-- patches/webhook_in_metal3dataclaims.yaml
-- patches/webhook_in_metal3remediations.yaml
-- patches/webhook_in_metal3remediationtemplates.yaml
+- path: patches/webhook_in_metal3machines.yaml
+- path: patches/webhook_in_metal3clusters.yaml
+- path: patches/webhook_in_metal3machinetemplates.yaml
+- path: patches/webhook_in_metal3datatemplates.yaml
+- path: patches/webhook_in_metal3datas.yaml
+- path: patches/webhook_in_metal3dataclaims.yaml
+- path: patches/webhook_in_metal3remediations.yaml
+- path: patches/webhook_in_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_metal3machines.yaml
-- patches/cainjection_in_metal3clusters.yaml
-- patches/cainjection_in_metal3machinetemplates.yaml
-- patches/cainjection_in_metal3datatemplates.yaml
-- patches/cainjection_in_metal3datas.yaml
-- patches/cainjection_in_metal3dataclaims.yaml
-- patches/cainjection_in_metal3remediations.yaml
-- patches/cainjection_in_metal3remediationtemplates.yaml
+- path: patches/cainjection_in_metal3machines.yaml
+- path: patches/cainjection_in_metal3clusters.yaml
+- path: patches/cainjection_in_metal3machinetemplates.yaml
+- path: patches/cainjection_in_metal3datatemplates.yaml
+- path: patches/cainjection_in_metal3datas.yaml
+- path: patches/cainjection_in_metal3dataclaims.yaml
+- path: patches/cainjection_in_metal3remediations.yaml
+- path: patches/cainjection_in_metal3remediationtemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [ANNOTATION] To add CRD name check skip, uncomment the section with [ANNOTATION] prefix.
 # patch here is for adding an annotation for specific CRD (Metal3Data)
-- patches/skipcrdnamecheck_in_metal3datas.yaml
+- path: patches/skipcrdnamecheck_in_metal3datas.yaml
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
