--- a/examples/clusterctl-templates/clusterctl-cluster.yaml
+++ b/examples/clusterctl-templates/clusterctl-cluster.yaml
@@ -6,11 +6,9 @@ metadata:
 spec:
   clusterNetwork:
     services:
-      cidrBlocks:
-      - 10.96.0.0/12
+      cidrBlocks: ${SERVICE_CIDR:=["10.96.0.0/12"]}
     pods:
-      cidrBlocks:
-      - 192.168.0.0/18
+      cidrBlocks: ${SERVICE_CIDR:=["192.168.0.0/18"]}
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: Metal3Cluster
