--- a/test/e2e/data/ironic-deployment/overlays/release-latest/ironic_bmo_configmap.env
+++ b/test/e2e/data/ironic-deployment/overlays/release-latest/ironic_bmo_configmap.env
@@ -1,11 +1,9 @@
 HTTP_PORT=6180
-PROVISIONING_IP=172.22.0.2
-CACHEURL=http://172.22.0.2/images
+PROVISIONING_IP=192.168.111.199
+CACHEURL=http://192.168.111.1:8080/images
 IRONIC_FAST_TRACK=true
 IRONIC_KERNEL_PARAMS=console=ttyS0
 IRONIC_INSPECTOR_VLAN_INTERFACES=all
 PROVISIONING_INTERFACE=ironicendpoint
-DHCP_RANGE=172.22.0.10,172.22.0.100
-DEPLOY_KERNEL_URL=http://172.22.0.2:6180/images/ironic-python-agent.kernel
-DEPLOY_RAMDISK_URL=http://172.22.0.2:6180/images/ironic-python-agent.initramfs
-IRONIC_ENDPOINT=http://172.22.0.2:6385/v1/
+USE_IRONIC_INSPECTOR=false
+DISABLE_DEEP_IMAGE_INSPECTION=true
