--- a/test/e2e/data/ironic-deployment/overlays/release-latest/kustomization.yaml
+++ b/test/e2e/data/ironic-deployment/overlays/release-latest/kustomization.yaml
@@ -17,21 +17,21 @@ configMapGenerator:
   behavior: create
 
 patches:
-- path: keepalived_patch.yaml
+- path: ironic-patch.yaml
 
+# TODO(lentzi90): Remove once issue resolved:
+# https://github.com/metal3-io/baremetal-operator/issues/2110
 images:
 - name: quay.io/metal3-io/ironic
-  newTag: latest
+  newTag: release-26.0
 
 # NOTE: These credentials are generated automatically in hack/ci-e2e.sh
 secretGenerator:
 - name: ironic-htpasswd
   behavior: create
-  envs:
-  - ironic-htpasswd
-- name: ironic-auth-config
   files:
-  - auth-config=ironic-auth-config
+  - htpasswd=ironic-htpasswd
+  type: Opaque
 
 replacements:
 # Replace IRONIC_HOST_IP in certificates with the PROVISIONING_IP from the configmap
